Fri Jun 11 15:59:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/URL.cc(removeIndex): use CompareWord instead of FindFirstWord,
	to avoid substring matches.

Wed Jun  2 15:51:00 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/URLTrans.cc(encodeURL): Fix to ensure that non-ASCII letters
	get URL-encoded.

Mon May 31 22:40:29 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentDB.cc(ReadExcerpt): Fix silly typos with methods,
	thinko with docID.
	(Add): Add the excerpt *before* the URL index is written.

	* htdig/Retriever.cc(isValidURL): Remove code restricting URLs to
	relative and http://.

	* htdig/htdig.cc(main): Unlink the doc_excerpt file when doing an
	initial dig.
	(main): Fix silly typo with minimumFile.

	* htmerge/db.cc(mergeDB): Call DocumentDB::Open() with doc_excerpt for
	consistency--doesn't actually do anything with it.

	* htmerge/docs.cc(convertDocs): Ditto. Also don't delete a
	document simply because it has an empty DocHead. Excerpts are now
	stored in a separate database!

	* htmerge/htmerge.h: Call mergeDB and convertDocs with
	doc_excerpt parameter.
	
	* htmerge/htmerge.cc(main): Ditto.

	* htsearch/Display.h: Call ctor with all three doc db filenames.

	* htsearch/Display.cc(Display): Call DocumentDB::Open with above.
	(excerpt): Retrieve the excerpt from the excerpt database.

	* htsearch/htsearch.cc: Call Display::Display with all three doc
	db filenames.
	
Mon May 31 15:08:30 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentDB.h: Add new method ReadExcerpt to read the
	excerpt from the separate (new) excerpt database. Change Open()
	and Read() methods to account for this new database.

	* htcommon/DocumentDB.cc (Open): Open the excerpt database too.
	(Read): Ditto.
	(Close): Close it if it exists.
	(ReadExcerpt): Explicitly read the DocHead of this DocumentRef.
	(Add): Make sure DocHeads go into the excerpt database.