@@ -1,3 +1,8 @@
+Sat Jun 12 14:00:39 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* htdig/ExternalParser.cc (parse): Quote the filename before
+	passing it to the command-line to prevent shell escapes. Fixes PR#542.
+
 Fri Jun 11 15:59:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htlib/URL.cc(removeIndex): use CompareWord instead of FindFirstWord,
